# gen-ai-experiments

./: .gitignore  CrewAI_using_Llama3_405B (1).ipynb  Financial_Analysis_Lecture.ipynb  JEE_AI_Agent.ipynb  LICENSE  Phidata Notebook.ipynb  RAG_(Retrieval_Augmented_Generation)_System_using_Llama_3_405B_.ipynb  README.md  ScrapeGraphAI_demo.ipynb  Testing_Nemotron_340B.ipynb  WebScraping_with_GenAI.ipynb  Web_Scraping_with_GenAI.ipynb  conftest.py  gradio_ollama_chat.py  instructor.ipynb  ollama_chat.py
100-OS-Libraries/: AgentOps_Evaluation.ipynb  Agentarium_AI_Agent_Orchestration_Framework.ipynb  AutoGen_Building_Collaborative_AI_Agents_in_Python.ipynb  Beginner_Guide_of_AI_Suite.ipynb  ChatArena_Multi_Agent_LLM_Environment.ipynb  Composio_Supercharge_Your_Apps_with_AI_Integration.ipynb  CrewAI_Essentials_Quick_Start_Guide.ipynb  Data_Analysis_with_PandasAI.ipynb  DeepPavlov_Advanced_Conversational_AI_Framework.ipynb  Docling_The_Ultimate_Document_Parsing_and_Exporting_Tool.ipynb  Getting_Started_with_Pydantic_AI.ipynb  Getting_started_with_Langgraph.ipynb  Giskard_Evaluation_&_Testing_Framework_for_AI_Systems.ipynb  LLM_Evaluation_with_Judges.ipynb  Langfuse_Open_Source_LLM_Engineering_Platform.ipynb  Langroid_Simplifies_LLM_Powered_Conversational_Agents_🦜.ipynb  LiteLLM_Simplified_LLM_Integration.ipynb  Open_Interpreter_Local_Code_Execution_with_LLMs.ipynb  Phidata_Agents_in_Action_A_Hands_On_Guide.ipynb  Portkey_AI_Unified_Generative_AI_Platform.ipynb  (+12 more)
apps/chat-with-pdf-or-webpage/: .gitignore  ingestion.py  llm_setup.py  main.py  pyproject.toml  rag_pipeline.py
(+670 files in other folders)
